[package]
name = "dexter-io-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.8.0"
anyhow = "1.0.86"
chrono = "0.4.39"
dotenv = "0.15.0"

fake_user_agent = "0.2.1"
image = "0.25.5"
indicatif = "0.17.8"
kamadak-exif = "0.6.1"
lazy_static = "1.5.0"
moka = { version = "0.12.8", features = ["future"] }
pkg-config = "0.3.31"
rand = "0.8.5"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["socks"] }
scraper = "0.20.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
supabase_rs = "0.3.7"
tokio = "1.39.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.4"
uuid = { version = "1.10.0", features = ["v4"] }

# For Windows (optional in later versions)
windows = { version = "0.58.0", features = [
    "Win32",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_System"
] }
